add simple frontend